# pRanked

./: .dockerignore  Dockerfile  README.md  fly.toml
backend/: Dockerfile  auth.py  domainObjects.py  fly.toml  litestream.yml  main.py  pyproject.toml  run_sqlite_migrations.py
backend/games/: games_router.py  test_games_router.http
backend/player/: player.py  player_router.py  player_service.py  test_player_router.http
backend/player_tests/: test_player_router.http
backend/ranking/: consts.py  glicko.py  outcome.py  rating.py  test_glicko.py
backend/routers/: player.py
backend/test_routers/: test_player.http
backend/utility/: sqlite_db.py
frontend/: .dockerignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  app.css  index.css
frontend/src/components/: GamePlayerSelector.svelte  nav.svelte  settings.svelte  spinny.svelte
frontend/src/components/configure/: AddPlayer.svelte  GamePlayerSelector.svelte  GameSubmitter.svelte
frontend/src/lib/: auth.ts  httpClient.ts
frontend/src/lib/domain/: routeLoadReturns.d.ts  routeLoadReturns.ts
frontend/src/lib/domain/games/: games.ts
frontend/src/lib/domain/player/: player.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/configure/: +page.js  +page.svelte  +page.ts
frontend/src/routes/graphs/: +page.svelte  +page.ts
glicko/: glicko.py  test_glicko.py
